- fixed some UI flicker during render animations for System Modules

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -679,6 +679,11 @@ table{
     }
   }
 
+  // "Fake" spacer module -> preserves height during hide -> show animation for a module
+  .pf-module-spacer{
+    margin-bottom: 10px;  // same as .pf-module -> no UI jump
+  }
+
 }
 
 // User status ====================================================================================
